# WeMadeIt_PE_Project

./: .coverage  .dockerignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  nginx.conf  prometheus.yml  pyproject.toml  seed.py
.github/workflows/: test.yml
app/: __init__.py  alerts.py  cache.py  logging_config.py  metrics_store.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  metrics.py  urls.py  users.py
docs/: CAPACITY_PLAN.md  DECISION_LOG.md  DEPLOY_GUIDE.md  FAILURE_MODES.md  RUNBOOK.md
seeds/: events.csv  urls.csv  users.csv
tests/: conftest.py  test_models.py  test_routes.py
